--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <h4 class="title">Live User Filer</h4>
             <small class="subtitle">Search by Name or Location</small>
-            <input type="text" id="filer" placeholder="Search">
+            <input type="text" id="filter" placeholder="Search">
         </header>
 
         <ul id="result" class="user-list">
